# UnifyAI_RAG_playground

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
rag/: app.py  model_provider.json  unify_llm.py
tests/: rag.ipynb  testing.ipynb
