[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["abhi2596 <abhijeetchintakunta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.33.0"
llama-index = "^0.10.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
